fixed footer and text size/alignement

--- a/style.css
+++ b/style.css
@@ -547,7 +547,7 @@ ul.navc li.active::after {
 .pricec4 {
     position: absolute;
     right: 30px;
-    padding-top: 60px;
+    padding-top: 70px;
 }
 
 .quanc1,
@@ -556,7 +556,7 @@ ul.navc li.active::after {
 .quanc4 {
     position: absolute;
     right: 30px;
-    padding-top: 40px;
+    padding-top: 50px;
 }
 
 .titlec {
